# element-infra

./: CODEOWNERS  Makefile  README.md  coturn.tf  data.tf  element.tf  hibernate-instances.sh  install_oh_my_zsh.sh  manage-lifecycle.sh  route53.tf  sg_main.tf  start-instances.sh  terraform-deploy.ps1  variables.tf
database/: Makefile  README.md  data.tf  main.tf  outputs.tf  providers.tf  terraform-deploy.ps1  variables.tf
homeserver/: .terraform.lock.hcl  Makefile  certbot_manager.tf  coturn.tf  data.tf  efs.tf  element.tf  livekit.tf  mas.tf  outputs.tf  providers.tf  redis.tf  refresh-instance.ps1  refresh-instance.sh  route53.tf  select-workspace.ps1  select-workspace.sh  sg_main.tf  sydent.tf  sygnal.tf  synapse.tf  synapse_storage.tf  terraform-deploy.ps1  terraform-deploy.sh  variables.tf
homeserver/modules/S3/: main.tf  outputs.tf  variables.tf
homeserver/scripts/: coturn_server_setup.tpl.sh  element_web_setup.tpl.sh  init-certbot.tpl.sh  livekit_server_setup.tpl.sh  mas_server_setup.tpl.sh  sydent_server_setup.tpl.sh  sygnal_service_setup.tpl.sh  synapse_server_setup.tpl.sh
instance_manager/: .gitignore  Makefile  README.md  pyproject.toml
instance_manager/docs/: development.md
instance_manager/src/instance_manager/: manage_lifecycle.py
modules/EFS/: main.tf  outputs.tf  variables.tf
scripts/: coturn_server_setup.tpl.sh  init-certbot.tpl.sh  synapse_server_setup.tpl.sh
vpc/: Makefile  README.md  client_vpn.tf  data.tf  main.tf  outputs.tf  private_subnets.tf  providers.tf  public_subnets.tf  terraform-deploy.ps1  variables.tf
(+21 files in other folders)
