[project]
name = "instance-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Đổng Giang Thái",email = "donggiangthai1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.40.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "instance_manager", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
boto3-stubs = {extras = ["autoscaling", "ec2"], version = "^1.40.1"}
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
